--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"version": "1.0.10",
 	"main": "./dist/index.js",
 	"engines": {
-		"node": ">=12"
+		"node": ">=14"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -35,35 +35,34 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^6.1.1",
-		"@natlibfi/marc-record-serializers": "^7.2.3",
-		"@natlibfi/sru-client": "^4.0.0",
-		"debug": "^4.1.1",
-		"moment": "^2.28.0",
-		"mongodb": "^3.6.2",
-		"natural": "^2.1.5",
-		"uuid": "^8.3.0",
+		"@natlibfi/marc-record": "^7.0.0-alpha.1",
+		"@natlibfi/marc-record-serializers": "^8.0.4",
+		"@natlibfi/sru-client": "^4.1.0",
+		"debug": "^4.3.2",
+		"moment": "^2.29.1",
+		"natural": "^5.1.11",
+		"uuid": "^8.3.2",
 		"winston": "^3.3.3"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.11.6",
-		"@babel/core": "^7.11.6",
-		"@babel/node": "^7.10.5",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/register": "^7.11.5",
-		"@natlibfi/eslint-config-melinda-backend": "^1.0.5",
-		"@natlibfi/fixugen": "^1.0.0",
-		"@natlibfi/fixugen-http-client": "^1.1.1",
-		"@natlibfi/fixura": "^2.1.3",
-		"babel-eslint": "^10.1.0",
-		"babel-plugin-istanbul": "^6.0.0",
+		"@babel/cli": "^7.16.0",
+		"@babel/core": "^7.16.0",
+		"@babel/node": "^7.16.0",
+		"@babel/preset-env": "^7.16.4",
+		"@babel/register": "^7.16.0",
+		"@natlibfi/eslint-config-melinda-backend": "^1.1.1",
+		"@natlibfi/fixugen": "^1.0.2",
+		"@natlibfi/fixugen-http-client": "^1.1.3",
+		"@natlibfi/fixura": "^2.2.1",
+		"@babel/eslint-parser": "^7.16.3",
+		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-rewire": "^1.2.0",
-		"chai": "^4.2.0",
+		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
-		"cross-env": "^7.0.2",
-		"eslint": "^7.9.0",
-		"mocha": "^8.1.3",
-		"nodemon": "^2.0.4",
+		"cross-env": "^7.0.3",
+		"eslint": "^7.32.0",
+		"mocha": "^9.1.3",
+		"nodemon": "^2.0.15",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
@@ -74,9 +73,7 @@
 			[
 				"@babel/preset-env",
 				{
-					"targets": {
-						"node": "12"
-					}
+					"targets": "maintained node versions"
 				}
 			]
 		],
