--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.0.10",
+	"version": "2.0.0-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=14"
