--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.0.0-alpha.1",
+		"@natlibfi/marc-record": "^7.0.0",
 		"@natlibfi/marc-record-serializers": "^8.0.4",
-		"@natlibfi/sru-client": "^4.1.0",
-		"debug": "^4.3.2",
+		"@natlibfi/sru-client": "^5.0.0-alpha.1",
+		"debug": "^4.3.3",
 		"moment": "^2.29.1",
 		"natural": "^5.1.11",
 		"uuid": "^8.3.2",
