--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.0.0",
 		"@natlibfi/marc-record-serializers": "^8.0.4",
-		"@natlibfi/sru-client": "^5.0.0-alpha.1",
+		"@natlibfi/sru-client": "^5.0.0",
 		"debug": "^4.3.3",
 		"moment": "^2.29.1",
 		"natural": "^5.1.11",
