--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "2.0.1",
+	"version": "2.1.0-alpha.2",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=14"
@@ -36,22 +36,22 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.0.0",
-		"@natlibfi/marc-record-serializers": "^8.0.4",
+		"@natlibfi/marc-record-serializers": "^8.1.0",
 		"@natlibfi/sru-client": "^5.0.0",
 		"debug": "^4.3.3",
 		"moment": "^2.29.1",
-		"natural": "^5.1.11",
+		"natural": "^5.1.13",
 		"uuid": "^8.3.2",
-		"winston": "^3.3.3"
+		"winston": "^3.3.4"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.16.0",
-		"@babel/core": "^7.16.0",
-		"@babel/node": "^7.16.0",
-		"@babel/preset-env": "^7.16.4",
-		"@babel/register": "^7.16.0",
-		"@babel/eslint-parser": "^7.16.3",
-		"@natlibfi/eslint-config-melinda-backend": "^1.1.1",
+		"@babel/cli": "^7.16.7",
+		"@babel/core": "^7.16.7",
+		"@babel/eslint-parser": "^7.16.5",
+		"@babel/node": "^7.16.7",
+		"@babel/preset-env": "^7.16.7",
+		"@babel/register": "^7.16.7",
+		"@natlibfi/eslint-config-melinda-backend": "^2.0.0",
 		"@natlibfi/fixugen": "^1.0.2",
 		"@natlibfi/fixugen-http-client": "^1.1.3",
 		"@natlibfi/fixura": "^2.2.1",
@@ -60,7 +60,7 @@
 		"chai": "^4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^7.32.0",
+		"eslint": "^8.6.0",
 		"mocha": "^9.1.3",
 		"nodemon": "^2.0.15",
 		"nyc": "^15.1.0"
