--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "2.1.0",
+	"version": "2.2.1-alpha.3",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=14"
@@ -23,6 +23,7 @@
 		"access": "public"
 	},
 	"scripts": {
+		"prepare": "npm run build",
 		"start": "node dist/index.js",
 		"cli": "node dist/cli.js",
 		"lint": "eslint src",
@@ -35,34 +36,35 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.0.0",
-		"@natlibfi/marc-record-serializers": "^8.1.0",
-		"@natlibfi/sru-client": "^5.0.0",
-		"debug": "^4.3.3",
-		"moment": "^2.29.1",
-		"natural": "^5.1.13",
-		"uuid": "^8.3.2",
-		"winston": "^3.3.4"
+		"@natlibfi/marc-record": "^7.2.1",
+		"@natlibfi/marc-record-serializers": "^9.0.0",
+		"@natlibfi/melinda-commons": "^12.0.4",
+		"@natlibfi/sru-client": "^5.0.3",
+		"debug": "^4.3.4",
+		"moment": "^2.29.4",
+		"natural": "^5.2.3",
+		"uuid": "^9.0.0",
+		"winston": "^3.8.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.16.7",
-		"@babel/core": "^7.16.7",
-		"@babel/eslint-parser": "^7.16.5",
-		"@babel/node": "^7.16.7",
-		"@babel/preset-env": "^7.16.7",
-		"@babel/register": "^7.16.7",
-		"@natlibfi/eslint-config-melinda-backend": "^2.0.0",
-		"@natlibfi/fixugen": "^1.0.2",
-		"@natlibfi/fixugen-http-client": "^1.1.3",
-		"@natlibfi/fixura": "^2.2.1",
+		"@babel/cli": "^7.19.3",
+		"@babel/core": "^7.19.3",
+		"@babel/eslint-parser": "^7.19.1",
+		"@babel/node": "^7.19.1",
+		"@babel/preset-env": "^7.19.4",
+		"@babel/register": "^7.18.9",
+		"@natlibfi/eslint-config-melinda-backend": "^2.0.1",
+		"@natlibfi/fixugen": "^1.1.0",
+		"@natlibfi/fixugen-http-client": "^2.0.1",
+		"@natlibfi/fixura": "^2.2.5",
 		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-rewire": "^1.2.0",
-		"chai": "^4.3.4",
+		"chai": "^4.3.6",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.6.0",
-		"mocha": "^9.1.3",
-		"nodemon": "^2.0.15",
+		"eslint": "^8.25.0",
+		"mocha": "^10.0.0",
+		"nodemon": "^2.0.20",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
