--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "2.2.3",
+	"version": "3.0.1-alpha.2",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=14"
@@ -36,9 +36,9 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.2.1",
-		"@natlibfi/marc-record-serializers": "^9.0.0",
-		"@natlibfi/melinda-commons": "^12.0.4",
+		"@natlibfi/marc-record": "^7.2.2",
+		"@natlibfi/marc-record-serializers": "^9.0.2",
+		"@natlibfi/melinda-commons": "^12.0.6",
 		"@natlibfi/sru-client": "^5.0.3",
 		"debug": "^4.3.4",
 		"moment": "^2.29.4",
@@ -48,9 +48,9 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.19.3",
-		"@babel/core": "^7.19.3",
+		"@babel/core": "^7.19.6",
 		"@babel/eslint-parser": "^7.19.1",
-		"@babel/node": "^7.19.1",
+		"@babel/node": "^7.20.0",
 		"@babel/preset-env": "^7.19.4",
 		"@babel/register": "^7.18.9",
 		"@natlibfi/eslint-config-melinda-backend": "^2.0.1",
@@ -62,8 +62,8 @@
 		"chai": "^4.3.6",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.25.0",
-		"mocha": "^10.0.0",
+		"eslint": "^8.26.0",
+		"mocha": "^10.1.0",
 		"nodemon": "^2.0.20",
 		"nyc": "^15.1.0"
 	},
