--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@natlibfi/melinda-commons": "^12.0.6",
 		"@natlibfi/sru-client": "^5.0.3",
 		"debug": "^4.3.4",
+		"isbn3": "^1.1.28",
 		"moment": "^2.29.4",
 		"natural": "^5.2.3",
 		"uuid": "^9.0.0",
