--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "3.0.1",
+	"version": "3.0.3-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=14"
@@ -41,6 +41,7 @@
 		"@natlibfi/melinda-commons": "^12.0.6",
 		"@natlibfi/sru-client": "^5.0.3",
 		"debug": "^4.3.4",
+		"isbn3": "^1.1.28",
 		"moment": "^2.29.4",
 		"natural": "^5.2.3",
 		"uuid": "^9.0.0",
