--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "4.1.2",
+	"version": "4.1.3-alpha.2",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -37,35 +37,35 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.2.2",
-		"@natlibfi/marc-record-serializers": "^10.0.4",
-		"@natlibfi/melinda-commons": "^13.0.4",
-		"@natlibfi/sru-client": "^6.0.2",
+		"@natlibfi/marc-record-serializers": "^10.0.6",
+		"@natlibfi/melinda-commons": "^13.0.5",
+		"@natlibfi/sru-client": "^6.0.4",
 		"debug": "^4.3.4",
-		"isbn3": "^1.1.35",
+		"isbn3": "^1.1.39",
 		"moment": "^2.29.4",
-		"natural": "^6.2.0",
+		"natural": "^6.5.0",
 		"uuid": "^9.0.0",
-		"winston": "^3.8.2"
+		"winston": "^3.10.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.21.0",
-		"@babel/core": "^7.21.4",
-		"@babel/eslint-parser": "^7.21.3",
-		"@babel/node": "^7.20.7",
-		"@babel/preset-env": "^7.21.4",
-		"@babel/register": "^7.21.0",
+		"@babel/cli": "^7.22.9",
+		"@babel/core": "^7.22.9",
+		"@babel/eslint-parser": "^7.22.9",
+		"@babel/node": "^7.22.6",
+		"@babel/preset-env": "^7.22.9",
+		"@babel/register": "^7.22.5",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.0",
-		"@natlibfi/fixugen": "^2.0.0",
-		"@natlibfi/fixugen-http-client": "^2.0.1",
-		"@natlibfi/fixura": "^3.0.0",
+		"@natlibfi/fixugen": "^2.0.1",
+		"@natlibfi/fixugen-http-client": "^3.0.0",
+		"@natlibfi/fixura": "^3.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-rewire": "^1.2.0",
 		"chai": "^4.3.7",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.38.0",
+		"eslint": "^8.45.0",
 		"mocha": "^10.2.0",
-		"nodemon": "^2.0.22",
+		"nodemon": "^3.0.1",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
