--- a/package.json
+++ b/package.json
@@ -36,25 +36,25 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.2.2",
-		"@natlibfi/marc-record-serializers": "^10.0.6",
+		"@natlibfi/marc-record": "^7.3.0",
+		"@natlibfi/marc-record-serializers": "^10.1.0-alpha.5",
 		"@natlibfi/melinda-commons": "^13.0.5",
 		"@natlibfi/sru-client": "^6.0.4",
 		"debug": "^4.3.4",
-		"isbn3": "^1.1.39",
+		"isbn3": "^1.1.40",
 		"moment": "^2.29.4",
 		"natural": "^6.5.0",
 		"uuid": "^9.0.0",
 		"winston": "^3.10.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.9",
-		"@babel/core": "^7.22.9",
-		"@babel/eslint-parser": "^7.22.9",
-		"@babel/node": "^7.22.6",
-		"@babel/preset-env": "^7.22.9",
+		"@babel/cli": "^7.22.10",
+		"@babel/core": "^7.22.10",
+		"@babel/eslint-parser": "^7.22.10",
+		"@babel/node": "^7.22.10",
+		"@babel/preset-env": "^7.22.10",
 		"@babel/register": "^7.22.5",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.0",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
 		"@natlibfi/fixugen": "^2.0.1",
 		"@natlibfi/fixugen-http-client": "^3.0.0",
 		"@natlibfi/fixura": "^3.0.1",
@@ -63,7 +63,7 @@
 		"chai": "^4.3.7",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.45.0",
+		"eslint": "^8.47.0",
 		"mocha": "^10.2.0",
 		"nodemon": "^3.0.1",
 		"nyc": "^15.1.0"
