--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.3.0",
-		"@natlibfi/marc-record-serializers": "^10.1.0-alpha.5",
+		"@natlibfi/marc-record-serializers": "^10.1.0",
 		"@natlibfi/melinda-commons": "^13.0.5",
 		"@natlibfi/sru-client": "^6.0.4",
 		"debug": "^4.3.4",
