--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "4.2.0",
+	"version": "4.2.1-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -41,29 +41,29 @@
 		"@natlibfi/melinda-commons": "^13.0.6",
 		"@natlibfi/sru-client": "^6.0.5",
 		"debug": "^4.3.4",
-		"isbn3": "^1.1.41",
+		"isbn3": "^1.1.42",
 		"moment": "^2.29.4",
-		"natural": "^6.7.1",
-		"uuid": "^9.0.0",
-		"winston": "^3.10.0"
+		"natural": "^6.8.0",
+		"uuid": "^9.0.1",
+		"winston": "^3.11.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.15",
-		"@babel/core": "^7.22.15",
+		"@babel/cli": "^7.23.0",
+		"@babel/core": "^7.23.2",
 		"@babel/eslint-parser": "^7.22.15",
-		"@babel/node": "^7.22.15",
-		"@babel/preset-env": "^7.22.15",
+		"@babel/node": "^7.22.19",
+		"@babel/preset-env": "^7.23.2",
 		"@babel/register": "^7.22.15",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.2",
 		"@natlibfi/fixugen": "^2.0.1",
 		"@natlibfi/fixugen-http-client": "^3.0.0",
 		"@natlibfi/fixura": "^3.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-rewire": "^1.2.0",
-		"chai": "^4.3.8",
+		"chai": "^4.3.10",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.48.0",
+		"eslint": "^8.51.0",
 		"mocha": "^10.2.0",
 		"nodemon": "^3.0.1",
 		"nyc": "^15.1.0"
