--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "4.2.0",
+	"version": "4.2.1-alpha.5",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -36,34 +36,33 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.3.1",
-		"@natlibfi/marc-record-serializers": "^10.1.1",
-		"@natlibfi/melinda-commons": "^13.0.6",
+		"@natlibfi/marc-record": "^8.0.0",
+		"@natlibfi/marc-record-serializers": "^10.1.2",
+		"@natlibfi/melinda-commons": "^13.0.8-alpha.1",
 		"@natlibfi/sru-client": "^6.0.5",
 		"debug": "^4.3.4",
-		"isbn3": "^1.1.41",
+		"isbn3": "^1.1.43",
 		"moment": "^2.29.4",
-		"natural": "^6.7.1",
-		"uuid": "^9.0.0",
-		"winston": "^3.10.0"
+		"natural": "^6.8.0",
+		"uuid": "^9.0.1",
+		"winston": "^3.11.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.15",
-		"@babel/core": "^7.22.15",
-		"@babel/eslint-parser": "^7.22.15",
-		"@babel/node": "^7.22.15",
-		"@babel/preset-env": "^7.22.15",
+		"@babel/cli": "^7.23.0",
+		"@babel/core": "^7.23.3",
+		"@babel/node": "^7.22.19",
+		"@babel/preset-env": "^7.23.3",
 		"@babel/register": "^7.22.15",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
-		"@natlibfi/fixugen": "^2.0.1",
-		"@natlibfi/fixugen-http-client": "^3.0.0",
-		"@natlibfi/fixura": "^3.0.1",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.3",
+		"@natlibfi/fixugen": "^2.0.2",
+		"@natlibfi/fixugen-http-client": "^3.0.1",
+		"@natlibfi/fixura": "^3.0.2",
 		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-rewire": "^1.2.0",
-		"chai": "^4.3.8",
+		"chai": "^4.3.10",
 		"chai-as-promised": "^7.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.48.0",
+		"eslint": "^8.53.0",
 		"mocha": "^10.2.0",
 		"nodemon": "^3.0.1",
 		"nyc": "^15.1.0"
