--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
 	},
 	"scripts": {
 		"prepare": "npm run build",
+		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist",
 		"start": "node dist/index.js",
 		"cli": "node dist/cli.js",
-		"lint": "eslint src",
-		"lint:dev": "eslint --fix src",
-		"test:base": "cross-env NODE_ENV=test nyc mocha --require @babel/register",
-		"test": "npm run lint && npm run test:base -- --recursive src",
-		"test:dev": "npm run lint:dev && npm run test:base -- --recursive src && npm run coverage",
+		"lint": "eslint ./src",
+		"lint:dev": "eslint --fix ./src",
+		"test": "npm run lint && npm run test:base",
+		"test:base": "cross-env NODE_ENV=test nyc mocha --package ./package.json",
+		"test:dev": "npm run lint:dev && npm run test:base && npm run coverage",
 		"coverage": "nyc check-coverage --per-file",
-		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist",
+		"dev": "nodemon",
+		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test nodemon",
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
@@ -88,23 +90,39 @@
 			}
 		}
 	},
-	"nyc": {
-		"exclude": [
-			"*/*.spec.js",
-			"*/**/*.spec.js"
-		],
-		"reporter": [
-			"lcov",
-			"html"
+	"mocha": {
+		"spec": [
+		  "src/*.spec.js",
+		  "src/**/*.spec.js"
 		],
 		"require": [
-			"@babel/register"
+		  "@babel/register"
 		],
-		"sourceMap": false,
-		"instrument": false,
-		"lines": 80,
-		"statements": 80,
-		"functions": 80,
-		"branches": 80
+		"inline-diffs": true,
+		"maxDiffSize": 25000,
+		"bail": true,
+		"exit": true
+	},
+	"nodemonConfig": {
+	  "exec": "npm run test:dev",
+	  "watch": [
+		"src/*",
+		"test-fixtures/*"
+	  ]
+	},
+	"nyc": {
+	  "exclude": [
+		"src/*.spec.js",
+		"src/**/*.spec.js"
+	  ],
+	  "reporter": [
+		"text"
+	  ],
+	  "sourceMap": false,
+	  "instrument": false,
+	  "lines": 80,
+	  "statements": 80,
+	  "functions": 80,
+	  "branches": 80
 	}
 }
