--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "4.3.1",
+	"version": "4.3.2-alpha.7",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -43,7 +43,7 @@
 		"@natlibfi/melinda-commons": "^13.0.12",
 		"@natlibfi/sru-client": "^6.0.8",
 		"debug": "^4.3.4",
-		"isbn3": "^1.1.44",
+		"isbn3": "^1.1.45",
 		"moment": "^2.30.1",
 		"natural": "^6.10.4",
 		"uuid": "^9.0.1",
