--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
-	"license": "LGPL-3.0+",
+	"license": "MIT",
 	"version": "4.3.2",
 	"main": "./dist/index.js",
 	"engines": {
