--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "MIT",
-	"version": "4.3.5-alpha.2",
+	"version": "4.3.5",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
