--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
 		"@natlibfi/marc-record": "^9.1.4",
 		"@natlibfi/marc-record-serializers": "^10.1.5",
 		"@natlibfi/melinda-commons": "^13.0.19",
-		"@natlibfi/sru-client": "^6.0.18",
+		"@natlibfi/sru-client": "^6.1.0-alpha.2",
 		"debug": "^4.4.0",
-		"isbn3": "^1.2.9",
+		"isbn3": "^1.2.10",
 		"moment": "^2.30.1",
 		"natural": "^8.0.1",
 		"uuid": "^11.1.0",
-		"winston": "^3.17.0"
+		"winston": "^3.17.0",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.27.0",
