--- a/package.json
+++ b/package.json
@@ -16,114 +16,45 @@
 	"license": "MIT",
 	"version": "4.3.5",
 	"main": "./dist/index.js",
+	"type": "module",
+	"bin": "./dist/cli.js",
 	"engines": {
-		"node": ">=18"
+		"node": ">=22"
 	},
 	"publishConfig": {
 		"access": "public"
 	},
 	"scripts": {
-		"prepare": "npm run build",
-		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist",
 		"start": "node dist/index.js",
+		"build": "esbuild \"src/**/*.js\" --sourcemap --platform=node --outdir=dist",
 		"cli": "node dist/cli.js",
 		"lint": "eslint ./src",
 		"lint:dev": "eslint --fix ./src",
+		"test:base": "node --test --test-force-exit --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
 		"test": "npm run lint && npm run test:base",
-		"test:base": "cross-env NODE_ENV=test nyc mocha --package ./package.json",
-		"test:dev": "npm run lint:dev && npm run test:base && npm run coverage",
-		"coverage": "nyc check-coverage --per-file",
-		"dev": "nodemon",
-		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test nodemon",
-		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
+		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test node --watch --test --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
+		"dev": "npm run watch:test",
+		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^9.1.4",
-		"@natlibfi/marc-record-serializers": "^10.1.5",
-		"@natlibfi/melinda-commons": "^13.0.19",
-		"@natlibfi/sru-client": "^6.1.0-alpha.2",
-		"debug": "^4.4.0",
-		"isbn3": "^1.2.10",
+		"@natlibfi/marc-record": "^10.0.0-alpha.1",
+		"@natlibfi/marc-record-serializers": "^11.0.0-alpha.2",
+		"@natlibfi/melinda-commons": "^14.0.0-alpha.3",
+		"@natlibfi/sru-client": "^7.0.0-alpha.1",
+		"debug": "^4.4.1",
+		"isbn3": "^1.2.14",
 		"moment": "^2.30.1",
 		"natural": "^8.0.1",
 		"uuid": "^11.1.0",
 		"winston": "^3.17.0",
-		"yargs": "^17.7.2"
+		"yargs": "^18.0.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.27.0",
-		"@babel/core": "^7.26.10",
-		"@babel/node": "^7.26.0",
-		"@babel/preset-env": "^7.26.9",
-		"@babel/register": "^7.25.9",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
-		"@natlibfi/fixugen": "^2.0.13",
-		"@natlibfi/fixugen-http-client": "^3.0.10",
-		"@natlibfi/fixura": "^3.0.12",
-		"babel-plugin-istanbul": "^6.1.1",
-		"babel-plugin-rewire": "^1.2.0",
-		"chai": "^4.5.0",
-		"chai-as-promised": "^7.1.2",
+		"@natlibfi/fixugen": "^3.0.0-alpha.6",
+		"@natlibfi/fixugen-http-client": "^4.0.0-alpha.1",
+		"@natlibfi/fixura": "^4.0.0-alpha.13",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.57.1",
-		"mocha": "^11.1.0",
-		"nodemon": "^3.1.9",
-		"nyc": "^17.1.0"
-	},
-	"eslintConfig": {
-		"extends": "@natlibfi/melinda-backend"
-	},
-	"babel": {
-		"presets": [
-			[
-				"@babel/preset-env",
-				{
-					"targets": "maintained node versions"
-				}
-			]
-		],
-		"env": {
-			"test": {
-				"plugins": [
-					"istanbul",
-					"rewire"
-				]
-			}
-		}
-	},
-	"mocha": {
-		"spec": [
-			"src/*.spec.js",
-			"src/**/*.spec.js"
-		],
-		"require": [
-			"@babel/register"
-		],
-		"inline-diffs": true,
-		"maxDiffSize": 25000,
-		"bail": true,
-		"exit": true
-	},
-	"nodemonConfig": {
-		"exec": "npm run test:dev",
-		"watch": [
-			"src/*",
-			"test-fixtures/*"
-		]
-	},
-	"nyc": {
-		"exclude": [
-			"src/*.spec.js",
-			"src/**/*.spec.js"
-		],
-		"reporter": [
-			"text"
-		],
-		"sourceMap": false,
-		"instrument": false,
-		"lines": 80,
-		"statements": 80,
-		"functions": 80,
-		"branches": 80
+		"esbuild": "^0.25.9",
+		"eslint": "^9.35.0"
 	}
 }
