--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
 	},
 	"license": "MIT",
-	"version": "4.3.5",
+	"version": "5.0.0-alpha.1",
 	"main": "./dist/index.js",
 	"type": "module",
 	"bin": "./dist/cli.js",
