--- a/.github/workflows/melinda-node-tests-and-publish.yml
+++ b/.github/workflows/melinda-node-tests-and-publish.yml
@@ -4,6 +4,10 @@ name: Melinda node tests
 
 on: push
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   build-node-versions:
     name: Node version matrix
@@ -18,7 +22,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v5
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v5
+      uses: actions/setup-node@v6
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -32,8 +36,7 @@ jobs:
   njsscan:
     name: Njsscan check
     runs-on: ubuntu-latest
-    container:
-      image: docker.io/node:22
+    container: node:22
 
     steps:
     - name: Checkout the code
@@ -47,12 +50,11 @@ jobs:
   license-scan:
     name: License compliance check
     runs-on: ubuntu-latest
-    container:
-      image: docker.io/node:22
+    container: node:22
 
     steps:
       - uses: actions/checkout@v5
-      - uses: mikaelvesavuori/license-compliance-action@v1.0.3
+      - uses: mikaelvesavuori/license-compliance-action@v1
         with:
           exclude_pattern: /^@natlibfi/
 
@@ -64,11 +66,19 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v5
+      - uses: actions/setup-node@v6
         with:
-          node-version: '20.x'
+          node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.MELINDA_RECORD_MATCHING_NPM_TOKEN }}
+      - name: Update npm
+        run: npm install -g npm@latest
+      - name: Clean install
+        run: npm ci
+      # Publish stable release with --tag latest
+      - name: Publish stable release
+        if: ${{!contains(github.ref, '-alpha')}}
+        run: npm publish --tag=latest
+      # Publish pre-release without --tag latest
+      - name: Publish pre-release
+        if: contains(github.ref, '-alpha')
+        run: npm publish --tag=next
