--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
 		"name": "The National Library of Finland"
 	},
 	"keywords": [],
-	"homepage": "https://github.com/natlibfi/melinda-record-matching-js",
+	"homepage": "https://www.npmjs.com/package/@natlibfi/melinda-record-matching",
 	"bugs": {
 		"url": "https://github.com/natlibfi/melinda-record-matching-js/issues"
 	},
 	"repository": {
-		"type": "git",
-		"url": "git@github.com:natlibfi/melinda-record-matching-js.git"
+		"url": "https://github.com/NatLibFi/melinda-record-matching-js"
 	},
 	"license": "MIT",
 	"version": "5.0.0-alpha.2",
@@ -38,22 +37,22 @@
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^10.0.0-alpha.1",
-		"@natlibfi/marc-record-serializers": "^11.0.0-alpha.2",
-		"@natlibfi/melinda-commons": "^14.0.0-alpha.3",
-		"@natlibfi/sru-client": "^7.0.0-alpha.1",
+		"@natlibfi/marc-record": "next",
+		"@natlibfi/marc-record-serializers": "next",
+		"@natlibfi/melinda-commons": "next",
+		"@natlibfi/sru-client": "next",
 		"debug": "^4.4.1",
 		"isbn3": "^1.2.14",
 		"moment": "^2.30.1",
 		"natural": "^8.0.1",
-		"uuid": "^11.1.0",
+		"uuid": "^13.0.0",
 		"winston": "^3.17.0",
 		"yargs": "^18.0.0"
 	},
 	"devDependencies": {
-		"@natlibfi/fixugen": "^3.0.0-alpha.6",
-		"@natlibfi/fixugen-http-client": "^4.0.0-alpha.1",
-		"@natlibfi/fixura": "^4.0.0-alpha.13",
+		"@natlibfi/fixugen": "next",
+		"@natlibfi/fixugen-http-client": "next",
+		"@natlibfi/fixura": "next",
 		"cross-env": "^7.0.3",
 		"esbuild": "^0.25.9",
 		"eslint": "^9.35.0"
