--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	},
 	"license": "MIT",
 	"version": "5.0.0-alpha.3",
-	"main": "./dist/index.js",
 	"type": "module",
+	"main": "./dist/index.js",
 	"bin": "./dist/cli.js",
 	"engines": {
 		"node": ">=22"
@@ -30,31 +30,30 @@
 		"cli": "node dist/cli.js",
 		"lint": "eslint ./src",
 		"lint:dev": "eslint --fix ./src",
-		"test:base": "node --test --test-force-exit --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
+		"test:base": "node --test --test-force-exit --experimental-test-coverage --test-reporter=spec './src/**/*.test.js'",
 		"test": "npm run lint && npm run test:base",
-		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test node --watch --test --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
+		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test node --watch --test --experimental-test-coverage --test-reporter=spec './src/**/*.test.js'",
 		"dev": "npm run watch:test",
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "next",
-		"@natlibfi/marc-record-serializers": "next",
-		"@natlibfi/melinda-commons": "next",
-		"@natlibfi/sru-client": "next",
-		"debug": "^4.4.1",
-		"isbn3": "^1.2.14",
+		"@natlibfi/marc-record": "^10.0.0",
+		"@natlibfi/marc-record-serializers": "^11.0.0",
+		"@natlibfi/melinda-commons": "^14.0.0",
+		"@natlibfi/sru-client": "^7.0.0",
+		"debug": "^4.4.3",
+		"isbn3": "^2.0.0",
 		"moment": "^2.30.1",
-		"natural": "^8.0.1",
+		"natural": "^8.1.0",
 		"uuid": "^13.0.0",
-		"winston": "^3.17.0",
 		"yargs": "^18.0.0"
 	},
 	"devDependencies": {
-		"@natlibfi/fixugen": "next",
-		"@natlibfi/fixugen-http-client": "next",
-		"@natlibfi/fixura": "next",
-		"cross-env": "^7.0.3",
-		"esbuild": "^0.25.9",
-		"eslint": "^9.35.0"
+		"@natlibfi/fixugen": "^3.0.0",
+		"@natlibfi/fixugen-http-client": "^4.0.0",
+		"@natlibfi/fixura": "^4.0.0",
+		"cross-env": "^10.1.0",
+		"esbuild": "^0.27.0",
+		"eslint": "^9.39.1"
 	}
 }
