--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	"dependencies": {
 		"@natlibfi/marc-record": "^10.0.1",
 		"@natlibfi/marc-record-serializers": "^11.0.1",
-		"@natlibfi/marc-record-validators-melinda": "^12.0.2",
+		"@natlibfi/marc-record-validators-melinda": "github:NatLibFi/marc-record-validators-melinda#samidebug",
 		"@natlibfi/melinda-commons": "^14.0.0",
 		"@natlibfi/sru-client": "^7.0.0",
 		"debug": "^4.4.3",
