--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	"dependencies": {
 		"@natlibfi/marc-record": "^10.0.1",
 		"@natlibfi/marc-record-serializers": "^11.0.1",
-		"@natlibfi/marc-record-validators-melinda": "github:NatLibFi/marc-record-validators-melinda#samidebug",
+		"@natlibfi/marc-record-validators-melinda": "^12.0.3",
 		"@natlibfi/melinda-commons": "^14.0.0",
 		"@natlibfi/sru-client": "^7.0.0",
 		"debug": "^4.4.3",
@@ -56,5 +56,9 @@
 		"cross-env": "^10.1.0",
 		"esbuild": "^0.27.2",
 		"eslint": "^9.39.2"
-	}
+	},
+	"overrides": {
+    	"nanoid": "^3.3.8"
+  	},
+  	"nvolkComment": "cld3-asm 4.0.0 uses emscripten-wasm-loader ^3.0.3 which uses problematic, non-secure nanoid version 2.X.X."
 }
